@@ -49,12 +49,15 @@ int main(int argc, char *argv[])
     #include "createFields.H"
     #include "createTimeControls.H"
     #include "readEvent.H"
+    #include "CourantNo.H"
+    #include "setInitialDeltaT.H"
     
     // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
     while (runTime.run())
     {
 
+        #include "CourantNo.H"
         #include "setDeltaT.H"
 
         runTime++;
